--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
   <body>
     <div class="nav-top">
       <div class="logo-img">
-        <img src="img/logo-10.png">
+        <img src="img/logo-7.png">
       </div>
       <div class="nav-icons">
         <a href="https://www.facebook.com/RockyGap.VA/" target="_blank" class="nav-icon">
@@ -70,39 +70,39 @@
       <h1>photo <span class="gallery-bold">gallery</span></h1>
       <div class="gallery-container">
         <div class="gallery">
-          <div class="gallery-img"><span><img src="gallery/img-0.jpg" alt="North Scenic Highway 3/20/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-1.jpg" alt="Old Bank Building 3/26/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-2.jpg" alt="North Scenic Highway 3/26/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-3.jpg" alt="Elementary School 3/26/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-6.jpg" alt="Playground 6/12/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-4.jpg" alt="North Scenic Highway 6/21/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-5.jpg" alt="North Scenic Highway 6/21/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-7.jpg" alt="Rocky Gap High School 6/21/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-8.jpg" alt="Elementary School 6/21/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-9.jpg" alt="North Scenic Highway 6/21/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-10.jpg" alt="Scenery 6/21/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-12.jpg" alt="Rocky Gap High School 8/15/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-13.jpg" alt="North Scenic Highway 8/15/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-14.jpg" alt="Eagles Road 7/15/2016"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-21.jpg" alt="North Scenic Road 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-15.jpg" alt="Route 52  10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-16.jpg" alt="Eagles Road 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-17.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-18.jpg" alt="Bland County High School 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-19.jpg" alt="North Scenic Road 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-20.jpg" alt="North Scenic Road 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-22.jpg" alt="North Scenic Road 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-23.jpg" alt="School Building 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-24.jpg" alt="Rocky Gap VA View 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-25.jpg" alt="Old Bank Building 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-11.jpg" alt="Bland County High School 5/31/2021"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-26.jpg" alt="Arcade Bulding Vintage Photo"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-27.jpg" alt="Carroll Brothers Grocery Vintage Photo"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-31.jpg" alt="Carroll Brothers Grocery Vintage Photo"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-32.jpg" alt="Carroll Brothers Grocery Vintage Photo"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-28.jpg" alt="Eagles Nest Restaurant Vintage Photo"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-29.jpg" alt="Rocky Gap High School Vintage Photo"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-30.jpg" alt="Rocky Gap High School Vintage Photo"></span></div>
+          <div class="gallery-img"><span><img src="gallery/a.jpg" alt="North Scenic Highway 3/20/2013"></span></div>
+          <div class="gallery-img"><span><img src="gallery/b.jpg" alt="Old Bank Building 3/26/2013"></span></div>
+          <div class="gallery-img"><span><img src="gallery/c.jpg" alt="North Scenic Highway 3/26/2013"></span></div>
+          <div class="gallery-img"><span><img src="gallery/d.jpg" alt="Elementary School 3/26/2013"></span></div>
+          <div class="gallery-img"><span><img src="gallery/e.jpg" alt="Playground 6/12/2013"></span></div>
+          <div class="gallery-img"><span><img src="gallery/f.jpg" alt="North Scenic Highway 6/21/2013"></span></div>
+          <div class="gallery-img"><span><img src="gallery/g.jpg" alt="North Scenic Highway 6/21/2013"></span></div>
+          <div class="gallery-img"><span><img src="gallery/h.jpg" alt="Rocky Gap High School 6/21/2013"></span></div>
+          <div class="gallery-img"><span><img src="gallery/i.jpg" alt="Elementary School 6/21/2013"></span></div>
+          <div class="gallery-img"><span><img src="gallery/j.jpg" alt="North Scenic Highway 6/21/2013"></span></div>
+          <div class="gallery-img"><span><img src="gallery/k.jpg" alt="Scenery 6/21/2013"></span></div>
+          <div class="gallery-img"><span><img src="gallery/l.jpg" alt="Rocky Gap High School 8/15/2013"></span></div>
+          <div class="gallery-img"><span><img src="gallery/m.jpg" alt="North Scenic Highway 8/15/2013"></span></div>
+          <div class="gallery-img"><span><img src="gallery/n.jpg" alt="Eagles Road 7/15/2016"></span></div>
+          <div class="gallery-img"><span><img src="gallery/o.jpg" alt="North Scenic Road 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/p.jpg" alt="Route 52  10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/q.jpg" alt="Eagles Road 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/r.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/s.jpg" alt="Bland County High School 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/t.jpg" alt="North Scenic Road 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/u.jpg" alt="North Scenic Road 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/v.jpg" alt="North Scenic Road 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/w.jpg" alt="School Building 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/x.jpg" alt="Rocky Gap VA View 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/y.jpg" alt="Old Bank Building 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/z.jpg" alt="Bland County High School 5/31/2021"></span></div>
+          <div class="gallery-img"><span><img src="gallery/za.jpg" alt="Arcade Bulding Vintage Photo"></span></div>
+          <div class="gallery-img"><span><img src="gallery/zb.jpg" alt="Carroll Brothers Grocery Vintage Photo"></span></div>
+          <div class="gallery-img"><span><img src="gallery/zc.jpg" alt="Carroll Brothers Grocery Vintage Photo"></span></div>
+          <div class="gallery-img"><span><img src="gallery/zd.jpg" alt="Carroll Brothers Grocery Vintage Photo"></span></div>
+          <div class="gallery-img"><span><img src="gallery/ze.jpg" alt="Eagles Nest Restaurant Vintage Photo"></span></div>
+          <div class="gallery-img"><span><img src="gallery/zf.jpg" alt="Rocky Gap High School Vintage Photo"></span></div>
+          <div class="gallery-img"><span><img src="gallery/zg.jpg" alt="Rocky Gap High School Vintage Photo"></span></div>
         </div>
       </div>
       <div class="yearbook-link">
