--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
           </a>
         </div>
         <ul class="nav-links">
-          <li class="nav-link">
+          <li class="nav-link" id="section">
             <a href="index.html">Home</a>
           </li>
-          <li class="nav-link">
+          <li class="nav-link" id="section">
             <a href="community.html">Community</a>
           </li>
-          <li class="nav-link">
+          <li class="nav-link" id="section">
             <a href="education.html">Education</a>
           </li>
-          <li class="nav-link">
+          <li class="nav-link" id="section">
             <a href="government.html">Government</a>
           </li>
-          <li class="nav-link">
+          <li class="nav-link" id="section">
             <a href="gallery.html">Gallery</a>
           </li>
           <li class="nav-link menu-links">
