--- a/community.html
+++ b/community.html
@@ -35,19 +35,19 @@
         </div>
         <ul class="nav-links">
           <li class="nav-link">
-            <a href="index.html">Home</a>
+            <a href="index.html" id="page">Home</a>
           </li>
           <li class="nav-link">
-            <a href="community.html">Community</a>
+            <a href="community.html" id="page">Community</a>
           </li>
           <li class="nav-link">
-            <a href="education.html">Education</a>
+            <a href="education.html" id="page">Education</a>
           </li>
           <li class="nav-link">
-            <a href="government.html">Government</a>
+            <a href="government.html" id="page">Government</a>
           </li>
           <li class="nav-link">
-            <a href="gallery.html">Gallery</a>
+            <a href="gallery.html" id="page">Gallery</a>
           </li>
           <li class="nav-link menu-links">
             <a href="#" class="dropdown">Links <i class="plus"></i></a>
