--- a/community.html
+++ b/community.html
@@ -115,9 +115,6 @@
           <p>12508 N Scenic Hwy, Rocky Gap, VA 24366</p>
           <p>(276) 928-1550</p>
           <div class="links">
-            <a href="https://www.umc.org/en/find-a-church/church/?id=41606" target="_blank">
-              <i class="fas fa-link"></i>
-            </a>
             <a href="https://www.facebook.com/Rocky-Gap-United-Methodist-335005006640282/" target="_blank">
               <i class="fab fa-facebook"></i>
             </a>
@@ -153,7 +150,7 @@
           <h5>Business Directory</h5>
           <h6>Affordable Dentures</h6>
           <p>12080 N Scenic Hwy, Rocky Gap, VA 24366</p>
-          <p>(276) 928-9159</p>
+          <p>(276) 928-9524</p>
           <div class="links">
             <a href="https://www.affordabledentures.com/locations/va/rocky-gap" target="_blank">
               <i class="fas fa-link"></i>
@@ -214,8 +211,8 @@
           <p>12671 Wilderness Rd, Rocky Gap, VA 24366</p>
           <p>(276) 928-0299</p>
           <div class="links">
-            <a href="http://www.tjmplumbing.net/" target="_blank">
-              <i class="fas fa-link"></i>
+            <a href="https://www.facebook.com/tjmplumbing.net/" target="_blank">
+              <i class="fab fa-facebook"></i>
             </a>
           </div>
           <hr>
@@ -242,7 +239,12 @@
 
           <h6>Woody's Grill</h6>
           <p>12749 N Scenic Hwy, Rocky Gap, VA 24366</p>
-          <p>(276) 928-1728</p>
+          <p>(276) 970-9745</p>
+          <div class="links">
+            <a href="https://www.restaurantji.com/va/rocky-gap/woodys-grill-/" target="_blank">
+              <i class="fas fa-link"></i>
+            </a>
+          </div>
         </div>
 
         <div class="card">
