--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,9 @@
   <body>
     <div class="nav-top">
       <div class="logo-img">
-        <img src="img/logo-10.png">
+        <a href="index.html">
+          <img src="img/logo-10.png">
+        </a>
       </div>
       <div class="nav-icons">
         <a href="https://www.facebook.com/RockyGap.VA/" target="_blank" class="nav-icon">
