--- a/education.html
+++ b/education.html
@@ -15,7 +15,7 @@
         </a>
       </div>
       <div class="nav-icons">
-        <a href="https://www.facebook.com/RockyGap.VA/" target="_blank" class="nav-icon">
+        <a href="https://www.facebook.com/groups/727213215411220/" target="_blank" class="nav-icon">
           <i class="fab fa-facebook"></i>
         </a>
         <a href="https://twitter.com/blandcountyva" target="_blank" class="nav-icon">
