--- a/community.html
+++ b/community.html
@@ -76,11 +76,11 @@
       <div class="overview-text">
         <p>
           Surrounded by beautiful mountains of the Appalachians, Rocky Gap is a community minded, family oriented, 
-          friendly, and safe small town for it's residents and visitors. In this small town, you can enjoy events, 
-          such as the annual Veteran's Day, Thanksgiving, and Christmas parade in November sponsored by the <a href=
-          "https://www.facebook.com/RockyGapRuritanClub/" target="_blank">RG Ruritans</a>, annual hotdog, barbeque, 
-          and bake sales, and easter egg hunts sponsored by some of it's residents, annual car shows, and other nearby
-          attractions. Rocky Gap is also a great place to visit or live if you love fishing and the outdoors.
+          friendly, and safe small town for it's residents and visitors. In this small town, you can enjoy it's tranquil
+          environment along with events, such as the annual Veteran's Day, Thanksgiving, and Christmas parade in November
+          sponsored by the <a href="https://www.facebook.com/RockyGapRuritanClub/" target="_blank">RG Ruritans</a>, annual 
+          hotdog, barbeque, and bake sales, and easter egg hunts sponsored by some of it's residents, annual car shows, and 
+          other nearby attractions. Rocky Gap is also a great place to visit or live if you love fishing and the outdoors.
         </p>
       </div>
 
