--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
   <body>
     <div class="nav-top">
       <div class="logo-img">
-        <a href="index.html">
+        <a href="index.html" id="page">
           <img src="img/logo-10.png">
         </a>
       </div>
