--- a/community.html
+++ b/community.html
@@ -78,9 +78,10 @@
           Surrounded by beautiful mountains of the Appalachians, Rocky Gap is a community minded, family oriented, 
           friendly, and safe small town for it's residents and visitors. In this small town, you can enjoy it's tranquil
           environment along with events, such as the annual Veteran's Day, Thanksgiving, and Christmas parade in November
-          sponsored by the <a href="https://www.facebook.com/RockyGapRuritanClub/" target="_blank">RG Ruritans</a>, annual 
-          hotdog, barbeque, and bake sales, and easter egg hunts sponsored by some of it's residents, annual car shows, and 
-          other nearby attractions. Rocky Gap is also a great place to visit or live if you love fishing and the outdoors.
+          sponsored by the <a href="https://www.facebook.com/RockyGapRuritanClub/" target="_blank">RG Ruritans</a>, annual
+          hotdog, barbeque, and bake sales, easter egg hunts, and many other community events during holidays and other occasions
+          sponsored by some of it's residents, occasional car shows, and other nearby attractions. Rocky Gap is also a great place
+          to visit or live if you love fishing and the outdoors.
         </p>
       </div>
 
