--- a/community.html
+++ b/community.html
@@ -79,9 +79,13 @@
           friendly, and safe small town for it's residents and visitors. In this small town, you can enjoy it's tranquil
           environment along with events, such as the annual Veteran's Day, Thanksgiving, and Christmas parade in November
           sponsored by the <a href="https://www.facebook.com/RockyGapRuritanClub/" target="_blank">RG Ruritans</a>, annual
-          hotdog, barbeque, and bake sales, easter egg hunts, and many other community events during holidays and other occasions
-          sponsored by some of it's residents, occasional car shows, and other nearby attractions. Rocky Gap is also a great place
-          to visit or live if you love fishing and the outdoors.
+          carshows, hotdog, barbeque, and bake sales, easter egg hunts, and many other delightful community events throughout 
+          the year sponsored by some of it's residents, and other nearby attractions. Rocky Gap is also a great place for 
+          outdoor enthusiasts who love nature and activities such as fishing, hiking, biking, walking, or running. The natural 
+          beauty of Rocky Gap can be observed in a variety of ways year round due to it's temperate climate. Blooming flowers in 
+          the spring, sunshine with green vegetation in the summer, great fall foilage in the fall, and snow on the trees in the 
+          winter. Great community spirit with a serene environment is what makes the small town of Rocky Gap, Virginia a great
+          place to visit or call home.
         </p>
       </div>
 
