--- a/community.html
+++ b/community.html
@@ -80,12 +80,11 @@
           environment along with events, such as the annual Veteran's Day, Thanksgiving, and Christmas parade in November
           sponsored by the <a href="https://www.facebook.com/RockyGapRuritanClub/" target="_blank">RG Ruritans</a>, annual
           carshows, hotdog, barbeque, and bake sales, easter egg hunts, and many other delightful community events throughout 
-          the year sponsored by some of it's residents, and other nearby attractions. Rocky Gap is also a great place for 
-          outdoor enthusiasts who love nature and activities such as fishing, hiking, biking, walking, or running. The natural 
-          beauty of Rocky Gap can be observed in a variety of ways year round due to it's temperate climate. Blooming flowers in 
-          the spring, sunshine with green vegetation in the summer, great fall foilage in the fall, and snow on the trees in the 
-          winter. Great community spirit with a serene environment is what makes the small town of Rocky Gap, Virginia a great
-          place to visit or call home.
+          the year sponsored by some of it's residents. Rocky Gap is also a great place for outdoor enthusiasts who love nature 
+          and activities such as fishing, hiking, biking, walking, or running. The natural beauty of Rocky Gap can be observed in
+          a variety of ways year round due to it's temperate climate. Blooming flowers in the spring, sunshine with green vegetation
+          in the summer, great fall foilage in the fall, and snow on the trees in the winter. Great community spirit with a serene 
+          and scenic environment is what makes the small town of Rocky Gap, Virginia a great place to visit or call home.
         </p>
       </div>
 
