--- a/community.html
+++ b/community.html
@@ -83,9 +83,9 @@
           the year sponsored by local churches, businesses or some of it's residents. Rocky Gap is also a great place for outdoor 
           enthusiasts who love nature and activities such as fishing, hiking, biking, walking, or running. The natural beauty of 
           Rocky Gap can be observed in a variety of ways year round due to it's temperate climate. Blooming flowers in the spring, 
-          sunshine with green vegetation in the summer, great fall foilage in the fall, and snow on the trees in the winter. 
-          Great community spirit with a serene and scenic environment is what makes the small town of Rocky Gap, Virginia a great 
-          place to visit or call home.
+          sunshine with green vegetation in the summer, great fall foilage in the fall, and snow on the trees in the winter are
+          sure to provide a refreshing sense of happiness and appreciation. Great community spirit with a serene and scenic
+          environment is what makes the small town of Rocky Gap, Virginia a great place to visit or call home.
         </p>
       </div>
 
