--- a/education.html
+++ b/education.html
@@ -11,7 +11,7 @@
     <div class="nav-top">
       <div class="logo-img">
         <a href="index.html">
-          <img src="img/logo-10.png" id="page">
+          <img src="img/logo-10.png">
         </a>
       </div>
       <div class="nav-icons">
