--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
     <div class="nav-top">
       <div class="logo-img">
         <a href="index.html">
-          <img src="img/logo-10.png" id="homeLink">
+          <img src="img/logo-10.png">
         </a>
       </div>
       <div class="nav-icons">
