--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
               Most of the shopping centers can be found over the mountain along
               Route 460 in neighboring Bluefield WV and Bluefield VA. The Walmart and Lowes plazas 
               can be found going west into the Virginia side and the Mercer Mall can be found going the
-              east direction into the West Virginia side. In town, Woody's Grill is a small convenience
-              store, which offers groceries, essentials, and is known for their great food and friendly 
+              east direction into the West Virginia side. In town, <a href="https://www.restaurantji.com/va/rocky-gap/woodys-grill-/">Woody's Grill</a> 
+              is a small convenience store, which offers groceries, essentials, and is known for their great food and friendly 
               service. Be sure to stop in.
             </p>
           </div>
