--- a/gallery.html
+++ b/gallery.html
@@ -76,7 +76,7 @@
           <div class="gallery-img"><span><img src="gallery/img-1.jpg" alt="Old Bank Building 3/26/2013"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-2.jpg" alt="North Scenic Highway 3/26/2013"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-3.jpg" alt="Elementary School 3/26/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-4.jpg" alt="Playground 6/12/2013"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-4.jpg" alt="RGMC 6/21/2013"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-5.jpg" alt="North Scenic Highway 6/21/2013"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-6.jpg" alt="North Scenic Highway 6/21/2013"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-7.jpg" alt="Rocky Gap High School 6/21/2013"></span></div>
