--- a/gallery.html
+++ b/gallery.html
@@ -84,7 +84,7 @@
           <div class="gallery-img"><span><img src="gallery/img-9.jpg" alt="North Scenic Highway 6/21/2013"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-10.jpg" alt="Scenery 6/21/2013"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-11.jpg" alt="Rocky Gap High School 8/15/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-12.jpg" alt="North Scenic Highway 8/15/2013"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-12.jpg" alt="Rocky Gap High School 8/15/2013"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-13.jpg" alt="Eagles Road 7/15/2016"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-14.jpg" alt="North Scenic Road 10/31/2017"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-15.jpg" alt="Route 52  10/31/2017"></span></div>
