--- a/gallery.html
+++ b/gallery.html
@@ -95,7 +95,7 @@
           <div class="gallery-img"><span><img src="gallery/img-20.jpg" alt="North Scenic Road 10/31/2017"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-21.jpg" alt="North Scenic Road 10/31/2017"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-22.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-23.jpg" alt="Rocky Gap VA View 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-23.jpg" alt="School Building 10/31/2017"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-24.jpg" alt="Old Bank Building 10/31/2017"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-25.jpg" alt="Bland County High School 5/31/2021"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-26.jpg" alt="Arcade Bulding Vintage Photo"></span></div>
