--- a/gallery.html
+++ b/gallery.html
@@ -97,7 +97,7 @@
           <div class="gallery-img"><span><img src="gallery/img-22.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-23.jpg" alt="School Building 10/31/2017"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-24.jpg" alt="Rocky Gap VA View 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-25.jpg" alt="Bland County High School 5/31/2021"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-25.jpg" alt="Old Bank Building 10/31/2017"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-26.jpg" alt="Arcade Bulding Vintage Photo"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-27.jpg" alt="Carroll Brothers Grocery Vintage Photo"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-28.jpg" alt="Carroll Brothers Grocery Vintage Photo"></span></div>
