--- a/gallery.html
+++ b/gallery.html
@@ -100,11 +100,11 @@
           <div class="gallery-img"><span><img src="gallery/img-25.jpg" alt="Old Bank Building 10/31/2017"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-26.jpg" alt="Arcade Bulding Vintage Photo"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-27.jpg" alt="Carroll Brothers Grocery Vintage Photo"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-31.jpg" alt="Carroll Brothers Vintage Photo"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-32.jpg" alt="Caroll Brothers Vintage Photo"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-28.jpg" alt="Eagle's Nest Restaurant Vintage Photo"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-29.jpg" alt="Rocky Gap High School Vintage Photo"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-30.jpg" alt="Rocky Gap High School Vintage Photo"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-31.jpg" alt="Rocky Gap High School Vintage Photo"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-32.jpg" alt="Rocky Gap High School Vintage Photo"></span></div>
         </div>
       </div>
       <div class="yearbook-link">
