--- a/gallery.html
+++ b/gallery.html
@@ -95,6 +95,9 @@
           <div class="gallery-img"><span><img src="gallery/img-23.jpg" alt="School Building 10/31/2017"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-24.jpg" alt="Rocky Gap VA View 10/31/2017"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-25.jpg" alt="Old Bank Building 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-33.jpg" alt="Rocky Gap VA View 7/26/2023"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-34.jpg" alt="Rocky Gap VA View 7/26/2023"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-35.jpg" alt="North Scenic Road 7/26/2023"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-26.jpg" alt="Arcade Bulding Vintage Photo"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-27.jpg" alt="Carroll Brothers Grocery Vintage Photo"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-31.jpg" alt="Carroll Brothers Vintage Photo"></span></div>
