--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <h6 class="icon-text">historical attractions</h6>
             <div class="attraction-underline"></div>
             <p class="paragraph">
-              Wolfe Creek Indian Village and Museum is one of many nearby 
+              <a href="https://indianvillage.org/" target="_blank">Wolfe Creek Indian Village and Museum</a> is one of many nearby 
               attractions in the area. It is a historical site, which provides a glimpse of the way 
               of life of the state and area's first Native American settlers. The village and museum has 
               attracted visitors from all over the world and the United States.
