--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               Rocky Gap offers some of the best country mountain scenery in the Appalachian Mountains for those who enjoy the 
               outdoors. The drive through town along Route 52 and up East River Mountain to the overlook on top of it in neighboring 
               Bluefield WV is sure to please anytime of the year. Don't forget to stop by the <a href="https://maps.roadtrippers.com/us/rocky-gap-va/points-of-interest/wolf-creek-bridge" target="_blank">
-              Old Wolfe Creek Bridge off of Route 61 near Rocky Gap to explore a historic railroad bridge and surround yourself with the
+              Old Wolfe Creek Bridge</a> off of Route 61 near Rocky Gap to explore a historic railroad bridge and surround yourself with the
               sights and sounds of nature.
             </p>
           </div>
