--- a/index.html
+++ b/index.html
@@ -106,10 +106,9 @@
             <h6 class="icon-text">outdoors/fishing</h6>
             <div class="attraction-underline"></div>
             <p class="paragraph">
-              Some of the best known trout fishing spots can be found along
-              the town's creeks. The abundance and size of trout in the creeks, make the spots
-              some of the most popular for area fishermen. Nearby Jefferson and George Washington
-              National Forests in Bland County VA are known for some of the best fishing, camping,
+              Some of the best known trout fishing spots can be found along the town's creeks. Wolfe Creek is known for it's
+              abundance and size of trout and is a popular spot for area fishermen. Nearby Jefferson and George Washington
+              National Forests in Bland County VA are also known for some of the best fishing, camping,
               and trails, including the Appalachian Trail.
             </p>
           </div>
