--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
             <h6 class="icon-text">historical attractions</h6>
             <div class="attraction-underline"></div>
             <p class="paragraph">
-              <a href="https://indianvillage.org/" target="_blank">Wolfe Creek Indian Village and Museum</a> is one of many nearby 
-              attractions in the area. It is a historical site, which provides a glimpse of the way 
-              of life of the state and area's first Native American settlers. The village and museum has 
-              attracted visitors from all over the world and the United States.
+              In addition to the Old Wolfe Creek Bridge in Rocky Gap, the <a href="https://indianvillage.org/" target="_blank">Wolfe
+              Creek Indian Village and Museum</a> located in nearby Bastain, Virginia is one of many nearby attractions in the area. 
+              It is a historical site, which provides a glimpse of the way of life of the state and area's first Native American 
+              settlers. The village and museum has attracted visitors from all over the world and the United States.
             </p>
           </div>
         </div>
