--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
             <div class="attraction-underline"></div>
             <p class="paragraph">
               Some of the best known fishing spots can be found along the town's creeks. Wolfe Creek is known for it's
-              abundance and size of trout and is a popular spot for area fishermen. Nearby Jefferson and George Washington
-              National Forests in Bland County VA are also known for some of the best fishing, camping,
+              abundance and size of trout and smallmouth bass and is a popular spot for area fishermen. Nearby Jefferson 
+              and George Washington National Forests in Bland County VA are also known for some of the best fishing, camping,
               and trails, including the Appalachian Trail.
             </p>
           </div>
