--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Rocky Gap, Virginia</title>
   </head>
   <body>
+    <div class="transition transition-1 transition active"></div>
     <div class="nav-top">
       <div class="logo-img">
         <img src="img/logo-10.png">
