--- a/education.html
+++ b/education.html
@@ -8,6 +8,8 @@
     <title>Rocky Gap, Virginia Education</title>
   </head>
   <body>
+    <div class="transition transition-1 transition active"></div>
+    
     <div class="nav-top">
       <div class="logo-img">
         <a href="index.html" id="page">
