--- a/gallery.html
+++ b/gallery.html
@@ -11,6 +11,8 @@
     <title>Photo Gallery</title>
   </head>
   <body>
+    <div class="transition transition-1 transition active"></div>
+    
     <div class="nav-top">
       <div class="logo-img">
         <a href="index.html" id="page">
