--- a/education.html
+++ b/education.html
@@ -8,7 +8,7 @@
     <title>Rocky Gap, Virginia Education</title>
   </head>
   <body>
-    <div class="transition transition-1 transition active"></div>
+    <div class="transition page-transition transition active"></div>
     
     <div class="nav-top">
       <div class="logo-img">
