--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
     <title>Photo Gallery</title>
   </head>
   <body>
-    <div class="transition transition-1 transition active"></div>
+    <div class="transition page-transition transition active"></div>
     
     <div class="nav-top">
       <div class="logo-img">
