--- a/education.html
+++ b/education.html
@@ -10,7 +10,7 @@
   <body>
     <div class="nav-top">
       <div class="logo-img">
-        <a href="index.html" id="page">
+        <a href="index.html">
           <img src="img/logo-10.png">
         </a>
       </div>
