--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Rocky Gap, Virginia</title>
   </head>
   <body>
+    <div class="transition transition-2 active"></div>
+   
     <div class="nav-top">
       <div class="logo-img">
         <img src="img/logo-10.png">
