--- a/government.html
+++ b/government.html
@@ -8,7 +8,7 @@
     <title>Rocky Gap, Virginia Government</title>
   </head>
   <body>
-    <div class="transition transition-2 active"></div>
+    <div class="transition transition-2"></div>
     
     <div class="nav-top">
       <div class="logo-img">
