--- a/community.html
+++ b/community.html
@@ -12,7 +12,7 @@
     
     <div class="nav-top">
       <div class="logo-img">
-        <a href="index.html" id="page">
+        <a href="index.html">
           <img src="img/logo-10.png">
         </a>
       </div>
