--- a/government.html
+++ b/government.html
@@ -8,11 +8,9 @@
     <title>Rocky Gap, Virginia Government</title>
   </head>
   <body>
-    <div class="transition transition-2"></div>
-    
     <div class="nav-top">
       <div class="logo-img">
-        <a href="index.html">
+        <a href="index.html" id="home">
           <img src="img/logo-10.png">
         </a>
       </div>
