--- a/gallery.html
+++ b/gallery.html
@@ -11,11 +11,9 @@
     <title>Photo Gallery</title>
   </head>
   <body>
-    <div class="transition transition-2"></div>
-    
     <div class="nav-top">
       <div class="logo-img">
-        <a href="index.html">
+        <a href="index.html" id="home">
           <img src="img/logo-10.png">
         </a>
       </div>
