--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
      <div class="nav-top">
       <div class="logo-img">
-        <img src="img/logo-10.png">
+        <a href="index.html id="home">
+          <img src="img/logo-10.png">
+        </a>
       </div>
       <div class="nav-icons">
         <a href="https://www.facebook.com/groups/727213215411220/" target="_blank" class="nav-icon">
