--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
           </a>
         </div>
         <ul class="nav-links">
-          <li class="nav-link" id="page">
-            <a href="index.html">Home</a>
+          <li class="nav-link">
+            <a href="index.html" id="page">Home</a>
           </li>
-          <li class="nav-link" id="page">
-            <a href="community.html">Community</a>
+          <li class="nav-link">
+            <a href="community.html" id="page">Community</a>
           </li>
-          <li class="nav-link" id="page">
-            <a href="education.html">Education</a>
+          <li class="nav-link">
+            <a href="education.html" id="page">Education</a>
           </li>
-          <li class="nav-link" id="page">
-            <a href="government.html">Government</a>
+          <li class="nav-link">
+            <a href="government.html" id="page">Government</a>
           </li>
-          <li class="nav-link" id="page">
-            <a href="gallery.html">Gallery</a>
+          <li class="nav-link">
+            <a href="gallery.html" id="page">Gallery</a>
           </li>
           <li class="nav-link menu-links">
             <a href="#" class="dropdown">Links <i class="plus"></i></a>
