--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
      <div class="nav-top">
       <div class="logo-img">
-        <a href="index.html id="home">
+        <a href="index.html" id="home">
           <img src="img/logo-10.png">
         </a>
       </div>
