--- a/community.html
+++ b/community.html
@@ -325,7 +325,7 @@
       </div>
       <div class="icons-line"></div>
       <div class="designer">
-        <p>Design by <a href="https://geraldandrewsmedia.com/" target="_blank">Gerald Andrews Media</a></p>
+        <p>Design by <a href="https://geraldandrewsmedia.netlify.app/" target="_blank">Gerald Andrews Media</a></p>
       </div>
     </footer>
 
