--- a/gallery.html
+++ b/gallery.html
@@ -72,39 +72,33 @@
       <h1>photo <span class="gallery-bold">gallery</span></h1>
       <div class="gallery-container">
         <div class="gallery">
-          <div class="gallery-img"><span><img src="gallery/img-0.jpg" alt="North Scenic Highway 3/20/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-1.jpg" alt="Old Bank Building 3/26/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-2.jpg" alt="North Scenic Highway 3/26/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-3.jpg" alt="Elementary School 3/26/2013"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-0.jpg" alt="Old Bank Building 7/01/2024"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-1.jpg" alt="North Scenic Highway 7/01/2024"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-2.jpg" alt="Route 52 7/01/2024"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-3.jpg" alt="Downtown 7/01/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-4.jpg" alt="RGMC 6/21/2013"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-5.jpg" alt="North Scenic Highway 6/21/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-7.jpg" alt="Rocky Gap High School 6/21/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-6.jpg" alt="School Playground 6/21/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-8.jpg" alt="Elementary School 6/21/2013"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-7.jpg" alt="Old Wolf Creek Bridge 7/01/2024"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-6.jpg" alt="Veterans Memorial 7/01/2024"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-8.jpg" alt="Wolf Creek 7/01/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-9.jpg" alt="North Scenic Highway 6/21/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-10.jpg" alt="Scenery 6/21/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-14.jpg" alt="Bland County High School 7/15/2016"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-10.jpg" alt="BCHS 7/01/2024"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-14.jpg" alt="North Scenic Highway 3/27/2024 7/15/2016"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-15.jpg" alt="Route 52  10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-16.jpg" alt="Eagles Road 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-17.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-18.jpg" alt="Bland County High School 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-19.jpg" alt="North Scenic Road 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-20.jpg" alt="North Scenic Road 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-21.jpg" alt="North Scenic Road 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-16.jpg" alt="North Scenic Road 7/01/2024"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-17.jpg" alt="BCHS 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-18.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-19.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-20.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-21.jpg" alt="North Scenic Highway 7/01/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-22.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-23.jpg" alt="School Building 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-23.jpg" alt="BCHS 10/31/2017"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-24.jpg" alt="Rocky Gap VA View 10/31/2017"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-25.jpg" alt="Old Bank Building 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-33.jpg" alt="Rocky Gap VA View 7/26/2023"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-34.jpg" alt="Rocky Gap VA View 7/26/2023"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-35.jpg" alt="North Scenic Road 7/26/2023"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-26.jpg" alt="Arcade Bulding Vintage Photo"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-27.jpg" alt="Carroll Brothers Grocery Vintage Photo"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-31.jpg" alt="Carroll Brothers Vintage Photo"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-32.jpg" alt="Caroll Brothers Vintage Photo"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-28.jpg" alt="Eagle's Nest Restaurant Vintage Photo"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-29.jpg" alt="Rocky Gap High School Vintage Photo"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-30.jpg" alt="Rocky Gap High School Vintage Photo"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-26.jpg" alt="North Scenic Highway 7/01/2024"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-27.jpg" alt="Aerial View 7/26/2023"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-28.jpg" alt="Aerial View 7/26/2023"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-29.jpg" alt="North Scenic Highway 7/26/2023"></span></div>
         </div>
       </div>
       <div class="yearbook-link">
