--- a/gallery.html
+++ b/gallery.html
@@ -81,24 +81,23 @@
           <div class="gallery-img"><span><img src="gallery/img-7.jpg" alt="Old Wolf Creek Bridge 7/01/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-6.jpg" alt="Veterans Memorial 7/01/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-8.jpg" alt="Wolf Creek 7/01/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-9.jpg" alt="North Scenic Highway 6/21/2013"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-9.jpg" alt="BCHS 7/01/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-10.jpg" alt="BCHS 7/01/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-14.jpg" alt="North Scenic Highway 3/27/2024 7/15/2016"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-14.jpg" alt="Wolf Creek 3/27/2024 3/27/2024 7/15/2016"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-15.jpg" alt="Route 52  10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-16.jpg" alt="North Scenic Road 7/01/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-17.jpg" alt="BCHS 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-16.jpg" alt="North Scenic Highway 7/01/2024"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-17.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-18.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-19.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-20.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-21.jpg" alt="North Scenic Highway 7/01/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-22.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-23.jpg" alt="BCHS 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-24.jpg" alt="Rocky Gap VA View 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-25.jpg" alt="Old Bank Building 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-26.jpg" alt="North Scenic Highway 7/01/2024"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-20.jpg" alt="North Scenic Highway 7/01/2024"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-21.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-22.jpg" alt="BCHS 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-23.jpg" alt="Rocky Gap VA View 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-24.jpg" alt="Old Bank Building 10/31/2017"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-25.jpg" alt="North Scenic Highway 7/01/2024"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-26.jpg" alt="Aerial View 7/26/2023"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-27.jpg" alt="Aerial View 7/26/2023"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-28.jpg" alt="Aerial View 7/26/2023"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-29.jpg" alt="North Scenic Highway 7/26/2023"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-28.jpg" alt="North Scenic Highway 7/26/2023"></span></div>
         </div>
       </div>
       <div class="yearbook-link">
