--- a/gallery.html
+++ b/gallery.html
@@ -83,6 +83,7 @@
           <div class="gallery-img"><span><img src="gallery/img-8.jpg" alt="Wolf Creek 7/01/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-9.jpg" alt="BCHS 7/01/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-10.jpg" alt="BCHS 7/01/2024"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-13.jpg" alt="North Scenic Highway 3/27/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-14.jpg" alt="Wolf Creek 3/27/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-15.jpg" alt="Route 52  10/31/2017"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-16.jpg" alt="North Scenic Highway 7/01/2024"></span></div>
