--- a/gallery.html
+++ b/gallery.html
@@ -81,10 +81,12 @@
           <div class="gallery-img"><span><img src="gallery/img-8.jpg" alt="Wolf Creek 7/01/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-9.jpg" alt="BCHS 7/01/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-10.jpg" alt="BCHS 7/01/2024"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-11.jpg" alt="North Scenic Highway 7/01/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-16.jpg" alt="North Scenic Highway 7/01/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-20.jpg" alt="North Scenic Highway 7/01/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-25.jpg" alt="North Scenic Highway 7/01/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-13.jpg" alt="North Scenic Highway 3/27/2024"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-12.jpg" alt="Wolf Creek 3/27/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-14.jpg" alt="Wolf Creek 3/27/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-26.jpg" alt="Aerial View 7/26/2023"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-27.jpg" alt="Aerial View 7/26/2023"></span></div>
