--- a/gallery.html
+++ b/gallery.html
@@ -88,8 +88,11 @@
           <div class="gallery-img"><span><img src="gallery/img-13.jpg" alt="North Scenic Highway 3/27/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-12.jpg" alt="Wolf Creek 3/27/2024"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-14.jpg" alt="Wolf Creek 3/27/2024"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-32.jpg" alt="Aerial View 7/26/2023"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-26.jpg" alt="Aerial View 7/26/2023"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-27.jpg" alt="Aerial View 7/26/2023"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-30.jpg" alt="BCHS 7/26/2023"></span></div>
+          <div class="gallery-img"><span><img src="gallery/img-31.jpg" alt="BCHS 7/26/2023"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-29.jpg" alt="BCHS 7/26/2023"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-28.jpg" alt="North Scenic Highway 7/26/2023"></span></div>
           <div class="gallery-img"><span><img src="gallery/img-15.jpg" alt="Route 52  10/31/2017"></span></div>
