--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </p>
           </div>
           <div class="about-img">
-            <img src="img/Rocky Gap 52.jpg" alt="Route 52 Rocky Gap VA">
+            <img src="img/post-office.jpg" alt="Route 52 Rocky Gap VA">
           </div>
         </article>
         <article class="about-container">
@@ -186,7 +186,7 @@
             </p>
           </div>
           <div class="bank-img">
-            <img src="img/Rocky Gap old building.jpg" alt="Bank building Rocky Gap VA">
+            <img src="img/bank-building.jpg" alt="Bank building Rocky Gap VA">
           </div>
         </article>
       </div>
