--- a/gallery.html
+++ b/gallery.html
@@ -126,9 +126,9 @@
         <img src="" alt="">
       </div>
       <div class="bottom-content">
-        <img src="img/Eagle.png" alt="eagle logo">
+        <img src="img/logo-10.png" alt="logo">
         <div id="caption"></div>
-        <img src="img/eagle-2.png" alt="eagle logo">
+        <img src="img/logo-10.png" alt="logo">
       </div>
     </div>
     <div class="img-shadow"></div>
