--- a/community.html
+++ b/community.html
@@ -69,7 +69,7 @@
       <h1>Community Overview</h1>
       <div class="community-img">
         <img src="img/flag.png" class="img-2">
-        <img src="img/fall.jpg">
+        <img src="img/bg.jpg">
         <img src="img/flag.png" class="img-2">
       </div>
 
