--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
 
     <header class="header">
       <div class="header-container">
+        <img src="img/headerImage-1.jpg">
+        <img src="img/headerImage-2.jpg">
+        <img src="img/headerImage-3.jpg">
+        <img src="img/headerImage-4.jpg">
+        <img src="img/headerImage-5.jpg">
         <div class="text-container">
           <h5 class="title-heading">Welcome to</h5>
           <div class="town-of">
